--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "license": "Copyright 2013, Hack Reactor. All rights reserved.",
   "scripts": {
     "test": "mocha server/spec"
-    
   },
   "devDependencies": {
     "mocha": "^1.21.4",
@@ -14,6 +13,8 @@
     "chai": "^1.9.0"
   },
   "dependencies": {
+    "body-parser": "^1.12.2",
+    "express": "^4.12.3",
     "underscore": "^1.8.3"
   }
 }
